Fix images corruption on small screen size

--- a/style.css
+++ b/style.css
@@ -246,6 +246,7 @@ footer .copy {
   .content,
   .single-deal {
     display: flex;
+    align-items: flex-start;
   }
 
   /*.content-main*/ h4 {
